--- a/src/pavucontrol-qt.desktop.in
+++ b/src/pavucontrol-qt.desktop.in
@@ -8,3 +8,7 @@ Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
 Categories=AudioVideo;Audio;Mixer;Qt;
+
+Name[pt]=Controlo de volume PulseAudio
+GenericName[pt]=Controlo de volume
+Comment[pt]=Ajustar o nível do volume
