build: Use pkg-config's *_LDFLAGS
..instead of just *_LIBRARIES

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -83,8 +83,8 @@ set_property(
 target_link_libraries(pavucontrol-qt
     Qt5::Widgets
     Qt5::DBus
-    ${PULSE_LIBRARIES}
-    ${GLIB_LIBRARIES}
+    ${PULSE_LDFLAGS}
+    ${GLIB_LDFLAGS}
 )
 
 install(TARGETS
