GUI fixes: Elide playback name label if needed and…
If the name is too long, elide it centrally, so that a horizontal scrollbar isn't needed (and isn't shown).

Also, don't force a height on progressbars because some widget styles may not show any bar with a forced height.

Closes https://github.com/lxqt/pavucontrol-qt/issues/99 and closes https://github.com/lxqt/pavucontrol-qt/issues/75

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set(pavucontrol-qt_HDRS
     sourceoutputwidget.h
     sourcewidget.h
     streamwidget.h
+    elidinglabel.h
 )
 
 set(pavucontrol-qt_SRCS
@@ -31,6 +32,7 @@ set(pavucontrol-qt_SRCS
     sourceoutputwidget.cc
     sourcewidget.cc
     streamwidget.cc
+    elidinglabel.cc
 )
 
 set(pavucontrol-qt_UI
