Added Settings category and improved description

--- a/src/pavucontrol-qt.desktop.in
+++ b/src/pavucontrol-qt.desktop.in
@@ -4,4 +4,4 @@ Exec=pavucontrol-qt
 Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
-Categories=AudioVideo;Audio;Mixer;Qt;
+Categories=Qt;AudioVideo;Audio;Settings;DesktopSettings;
