--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ project(pavucontrol-qt)
 
 option(UPDATE_TRANSLATIONS "Update source translation translations/*.ts files" OFF)
 
+# Enable Qt6 build preference
+option (CONFIG_QT6 "Enable Qt6 build (default=yes)" ON)
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -20,10 +23,17 @@ include(GNUInstallDirs)
 # Minimum Versions
 set(GLIB_MINIMUM_VERSION "2.50.0")
 set(LXQTBT_MINIMUM_VERSION "0.13.0")
-set(QT_MINIMUM_VERSION "5.15.0")
+if (CONFIG_QT6)
+	set(QT_MINIMUM_VERSION "6.6.0")
+	find_package(Qt6Widgets ${QT_MINIMUM_VERSION} REQUIRED)
+	find_package(Qt6LinguistTools ${QT_MINIMUM_VERSION} REQUIRED)
+else()
+	set(QT_MINIMUM_VERSION "5.15.0")
+	find_package(Qt5Widgets ${QT_MINIMUM_VERSION} REQUIRED)
+	find_package(Qt5LinguistTools ${QT_MINIMUM_VERSION} REQUIRED)
+endif()
 
-find_package(Qt5Widgets ${QT_MINIMUM_VERSION} REQUIRED)
-find_package(Qt5LinguistTools ${QT_MINIMUM_VERSION} REQUIRED)
+
 find_package(lxqt-build-tools ${LXQTBT_MINIMUM_VERSION} REQUIRED)
 
 find_package(GLIB ${GLIB_MINIMUM_VERSION} REQUIRED)
